// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  email     String @id @db.VarChar(255)
  name      String @db.VarChar(255)
  password  String @db.VarChar(255)
  image_url String @db.VarChar(255)
  token     String @db.VarChar(255)

  @@map("users")
}
